JPA Entities fix and swagger doc

--- a/JpaAuditApachePoiDemo/src/main/resources/application.properties
+++ b/JpaAuditApachePoiDemo/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/employee-database
-spring.datasource.username=root
-spring.datasource.password=deepankar
 server.port=8083
+server.servlet.context-path=/report
+
+spring.datasource.url=jdbc:mysql://localhost:3306/employee-database
+spring.datasource.username=test_user
+spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
-
-
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
