--- a/JpaAuditApachePoiDemo/build.gradle
+++ b/JpaAuditApachePoiDemo/build.gradle
@@ -21,9 +21,14 @@ repositories {
 dependencies {
 	compile group: 'org.springframework.boot', name: 'spring-boot-devtools'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'mysql:mysql-connector-java'
+	compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.8'
+	
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
